After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598933 - [pulse] Fix the StreamVolume interface not being advertised
[pulse] Fix the StreamVolume interface not being advertised
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.x
Other All
: Normal normal
: 0.10.17
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-10-19 14:24 UTC by Bastien Nocera
Modified: 2009-10-19 14:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[pulse] Fix the StreamVolume interface not being advertised (845 bytes, patch)
2009-10-19 14:24 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2009-10-19 14:24:09 UTC
See patch
Comment 1 Bastien Nocera 2009-10-19 14:24:12 UTC
Created attachment 145784 [details] [review]
[pulse] Fix the StreamVolume interface not being advertised

gst_pulsesink_interface_supported() was missing a check for it.
Comment 2 Sebastian Dröge (slomo) 2009-10-19 14:34:07 UTC
I'll commit that later if nobody else is faster
Comment 3 Jan Schmidt 2009-10-19 14:37:43 UTC
pushed to master